scrollbars fixed

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -119,7 +119,7 @@
   scrollbar-width: none;
 }
 .of_scr {
-  overflow: scroll;
+  overflow-y: scroll;
 }
 .of_hid {
   overflow: hidden;
